fix: add margin to h4 for better spacing

--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@ h4 {
     font-size: 1em;
     color: #4a4a4a;
     text-align: center;
+    margin: 0.5em 0;
 }
 
 h5 {
